--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "with-tailwindcss",
   "version": "1.0.0",
+  "license": "MIT",
   "scripts": {
     "dev": "next",
     "build": "next build",
@@ -12,9 +13,22 @@
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
+    "@types/node": "^14.14.20",
+    "@types/react": "^17.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.12.0",
+    "@typescript-eslint/parser": "^4.12.0",
     "autoprefixer": "10.0.2",
+    "eslint": "^7.17.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.22.0",
     "postcss": "8.1.7",
-    "tailwindcss": "^2.0.2"
-  },
-  "license": "MIT"
+    "prettier": "^2.2.1",
+    "tailwindcss": "^2.0.2",
+    "typescript": "^4.1.3"
+  }
 }
